# aioecowitt

./: .pre-commit-config.yaml  LICENSE  README.md  api.py  models.py  pyproject.toml  requirements_tests.txt  setup.cfg  setup.py  test_basic.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  renovate.json
.github/workflows/: ci.yml  pythonpublish.yml  release-drafter.yml  test.yml
aioecowitt/: __init__.py  __main__.py  api.py  calc.py  errors.py  models.py  sensor.py  server.py  station.py
ecowitt/: __init__.py  __main__.py  calc.py  server.py
examples/: api_example.py
misc/: example.data  fake_client.py
scripts/: run-in-env.sh
tests/: conftest.py  const.py  test_api.py  test_calc.py  test_sensor.py  test_server.py  test_station.py
